# eventhub-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  allurerc.mjs  allurerc.yaml  docker-compose.logging.yml  docker-compose.yml  gunicorn.conf.py  package.json  pyproject.toml  requirements.txt  summary.md
allure-report/: index.html
allure-report/awesome/: index.html  summary.json
allure-report/awesome/widgets/: charts.json  nav.json  statistic.json  timeline.json  tree-filters.json
allure-report/awesome/widgets/default/: tree.json  variables.json
allure-report/dashboard/: index.html  summary.json
allure-report/dashboard/widgets/: charts.json
app/: config.py  database.py  main.py  redis_client.py
app/api/: api.py  deps.py
app/api/routes/: admin.py  auth.py  events.py  users.py
app/config_models/: auth_config.py  data_base_config.py  event_config.py  loggers_enum.py  redis_config.py
app/depency_container/: event_deps.py  users_deps.py
app/dependency_container/: activation_code_deps.py  event_deps.py  users_deps.py
app/middleware/: logging.py  request_context.py
app/migrations/: base.py  runner.py
app/migrations/versions/: 001_initial.py
app/models/: activation_code.py  events.py  registration.py  user.py
app/schemas/: activation_code.py  event.py  registration.py  token.py  users.py
app/schemas/enums/event_enums/: event_enums.py
app/schemas/enums/user_enums/: users_status.py
app/services/: activation_code.py  auth.py  base.py  cache.py  event.py  queue.py  user.py
app/tasks/: broker.py  cache.py  cleanup.py  middleware.py  notifications.py  settings.py  worker.py
app/utils/: logger.py
grafana/provisioning/dashboards/: eventhub-monitoring.json  logs-dashboard.json  loki-dashboard.yaml
grafana/provisioning/datasources/: loki-datasource.yaml  prometheus-datasource.yaml
loki/: local-config.yaml
nginx/: generate-ssl.sh  nginx.conf
nginx/ssl/: default.crt  default.key
prometheus/: prometheus.yml
promtail/: config.yml
tests/: conftest.py  pytest.ini
tests/core/auth_data_factory/: fake_auth_data.py
tests/core/const/: allure_labels.py  base_enum_marker.py  mark_enums.py
tests/core/event_data_factory/: fake_event_data.py
tests/core/user_data_factory/: fake_user_data.py
tests/mock/: mongo_mock.py
tests/scripts/: coverage_parser.py  extract_coverage.py  quality_gate.py
tests/unit/: conftest.py
tests/unit/tests_dao/: conftest.py  test_activation_code_dao.py  test_concurrency.py  test_event_dao.py  test_registration_dao.py  test_user_dao.py
tests/unit/tests_srvices/: conftest.py  test_activation_code_service.py  test_auth_service.py  test_concurrency.py  test_event_service.py  test_user_service.py
