[tool.poetry]
name = "eventhub-api"
version = "0.1.0"
description = "Event managment platform"
authors = ["Artem Degtyarev https://t.me/JohnyBlacksad"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
motor = "^3.7.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
PyJWT = "^2.11.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"
mongomock = "^4.1.2"
allure-pytest = "^2.13.2"
ruff = "^0.1.14"
faker = "^40.11.0"
mongomock-motor = "^0.0.36"
pytest-subtests = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

markers = [
    "UNITS: Unit tests",
    "INTEGRATION: Integration tests",
    "LOAD: Load tests",
    "DAO: Data Access Object tests",
    "SERVICES: Service layer tests",
    "API: API endpoint tests",
    "USERS: User related tests",
    "EVENTS: Event related tests",
    "AUTH: Authentication tests",
    "ACTIVATION_CODE: Activation code tests",
    "CREATE_USER: Testing user creation logic",
    "GET_USER: Testing get user logic",
    "UPDATE_USER: Testing user update logic",
    "DELETE_USER: Testing user deletion logic",
    "UPDATE_ROLE: Testing user role update logic",
    "BAN_USER: Testing user ban logic",
    "GET_USERS: Testing user list and filtering logic",
    "SETUP_INDEXES: Testing database index setup"
]

addopts = [
    "-s",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:./tests/reports/allure-results/coverage.xml",
    "--cov-report=html:./tests/reports/coverage-html",
    "--alluredir=./tests/reports/allure-results",
    "--verbose"
]